SD Lab/socket programming/1-4-19/2.txt
student@T28:~$ cd meenusd
student@T28:~/meenusd$ cd 1-4-19
student@T28:~/meenusd/1-4-19$ gedit server.java
^C
student@T28:~/meenusd/1-4-19$ javac server.java
student@T28:~/meenusd/1-4-19$ javac client.java
client.java:6: error: ';' expected
        public static void main(String[] args) throws IOException 
                                                                 ^
client.java:9: error: <identifier> expected
                System.out.println("Client connected to the server");
                                  ^
client.java:9: error: illegal start of type
                System.out.println("Client connected to the server");
                                   ^
client.java:18: error: <identifier> expected
                System.out.println("to Start the chat, type message and press Enter key"); 
                                  ^
client.java:18: error: illegal start of type
                System.out.println("to Start the chat, type message and press Enter key"); 
                                   ^
client.java:20: error: illegal start of type
                while(true)
                ^
client.java:20: error: illegal start of type
                while(true)
                      ^
client.java:36: error: class, interface, or enum expected
}
^
8 errors
student@T28:~/meenusd/1-4-19$ javac client.java
client.java:6: error: ';' expected
        public static void main(String[] args) throws IOException 
                                                                 ^
client.java:9: error: <identifier> expected
                System.out.println("Client connected to the server");
                                  ^
client.java:9: error: illegal start of type
                System.out.println("Client connected to the server");
                                   ^
client.java:18: error: <identifier> expected
                System.out.println("to Start the chat, type message and press Enter key"); 
                                  ^
client.java:18: error: illegal start of type
                System.out.println("to Start the chat, type message and press Enter key"); 
                                   ^
client.java:20: error: illegal start of type
                while(true)
                ^
client.java:20: error: illegal start of type
                while(true)
                      ^
client.java:36: error: class, interface, or enum expected
}
^
8 errors
student@T28:~/meenusd/1-4-19$ javac client.java
client.java:4: error: class Client is public, should be declared in a file named Client.java
public class Client
       ^
1 error
student@T28:~/meenusd/1-4-19$ javac client.java
javac: file not found: client.java
Usage: javac <options> <source files>
use -help for a list of possible options
student@T28:~/meenusd/1-4-19$ javac Client.java
student@T28:~/meenusd/1-4-19$ 

